use ui-tools as a name for the moment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bb-lp-cli-next",
+  "name": "ui-tools",
   "version": "0.0.1-alpha",
   "description": "Backbase shared UI core components",
   "main": "./tools/setup.js",
